--- a/src/Beeper/Beeper.csproj
+++ b/src/Beeper/Beeper.csproj
@@ -7,11 +7,12 @@
         <AssemblyName>OldBit.Beeper</AssemblyName>
         <RootNamespace>OldBit.Beeper</RootNamespace>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <Version>0.0.1</Version>
+        <Version>0.0.2</Version>
         <Title>OldBit.Beeper</Title>
         <Authors>Wojciech Sobieszek</Authors>
         <RepositoryUrl>https://github.com/oldbit-com/Beeper</RepositoryUrl>
         <Description>Simple cross platform dotnet library for playing audio</Description>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
 
 </Project>
