--- a/src/Beeper/Beeper.csproj
+++ b/src/Beeper/Beeper.csproj
@@ -15,4 +15,8 @@
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
 
+    <ItemGroup>
+        <InternalsVisibleTo Include="OldBit.Beeper.UnitTests" />
+    </ItemGroup>
+
 </Project>
