Add Platform folder

--- a/src/Beeper/Beeper.csproj
+++ b/src/Beeper/Beeper.csproj
@@ -19,4 +19,8 @@
         <InternalsVisibleTo Include="OldBit.Beeper.UnitTests" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Platforms\" />
+    </ItemGroup>
+
 </Project>
