--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -26,4 +26,4 @@ jobs:
       run: dotnet publish -c Release --no-restore
 
     - name: Upload nuget package
-      run: dotnet nuget push ./src/Beeper/bin/Release/*.nupkg --api-key ${{ secrets.GITHUB_TOKEN }} --source https://nuget.pkg.github.com/oldbit-com/index.json
+      run: dotnet nuget push ./src/Beep/bin/Release/*.nupkg --api-key ${{ secrets.GITHUB_TOKEN }} --source https://nuget.pkg.github.com/oldbit-com/index.json
