Fix internal visible to

--- a/src/Beep/Beep.csproj
+++ b/src/Beep/Beep.csproj
@@ -16,7 +16,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <InternalsVisibleTo Include="OldBit.Beeper.UnitTests" />
+        <InternalsVisibleTo Include="OldBit.Beep.UnitTests" />
     </ItemGroup>
 
     <ItemGroup>
