--- a/src/Beep/Beep.csproj
+++ b/src/Beep/Beep.csproj
@@ -7,11 +7,11 @@
         <AssemblyName>OldBit.Beep</AssemblyName>
         <RootNamespace>OldBit.Beep</RootNamespace>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <Version>0.0.4</Version>
+        <Version>0.0.10</Version>
         <Title>OldBit.Beep</Title>
         <Authors>Wojciech Sobieszek</Authors>
         <RepositoryUrl>https://github.com/oldbit-com/Beep</RepositoryUrl>
-        <Description>Simple cross platform dotnet library for playing audio</Description>
+        <Description>Simple cross platform library for playing audio.</Description>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
 
