--- a/src/Beep/Beep.csproj
+++ b/src/Beep/Beep.csproj
@@ -7,12 +7,14 @@
         <AssemblyName>OldBit.Beep</AssemblyName>
         <RootNamespace>OldBit.Beep</RootNamespace>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <Version>0.0.10</Version>
+        <Version>0.9.0</Version>
         <Title>OldBit.Beep</Title>
         <Authors>Wojciech Sobieszek</Authors>
         <RepositoryUrl>https://github.com/oldbit-com/Beep</RepositoryUrl>
-        <Description>Simple cross platform library for playing audio.</Description>
+        <Description>Simple cross-platform library for playing PCM audio. Uses native frameworks for audio playback.</Description>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageProjectUrl>https://github.com/oldbit-com/Beep</PackageProjectUrl>
+        <PackageLicenseUrl>https://github.com/oldbit-com/Beep/blob/main/LICENSE</PackageLicenseUrl>
     </PropertyGroup>
 
     <ItemGroup>
