--- a/src/Beep/Beep.csproj
+++ b/src/Beep/Beep.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net10.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <AssemblyName>OldBit.Beep</AssemblyName>
         <RootNamespace>OldBit.Beep</RootNamespace>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <Version>0.9.4</Version>
+        <Version>1.0.1</Version>
         <Title>OldBit.Beep</Title>
         <Authors>Wojciech Sobieszek</Authors>
         <RepositoryUrl>https://github.com/oldbit-com/Beep</RepositoryUrl>
@@ -18,6 +18,8 @@
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <GenerateDocumentationFile>True</GenerateDocumentationFile>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
         <PackageTags>audio,audio player,cross-platform, audio toolbox, alsa, wasapi</PackageTags>
     </PropertyGroup>
 
