--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,15 @@ name: Build and Test
 
 on:
   push:
+    paths:
+      - 'src/**'
+      - 'tests/**'
     branches: [ "main" ]
+
   pull_request:
+    paths:
+      - 'src/**'
+      - 'tests/**'
     branches: [ "main" ]
 
 jobs:
